Add Adoption Application form on cliend-side:
- Create pet_adoption folder in /components/pet/components
- Create PetAdoptionComponent as main core of the adoption application section
- Create PetAdoptionForm component to represent the application form
- Implemenet POST request functionality to post the form data to /adoption/apply API endpoint

--- a/bb-pets-adoption-frontend/src/css/petListing.css
+++ b/bb-pets-adoption-frontend/src/css/petListing.css
@@ -193,6 +193,16 @@ position: absolute;
     /* Responsive height */
 }
 
+#pet_adoption_wrapper {
+    margin-top: 100px;
+
+}
+
+#adoption_form_accordion_wrapper {
+    margin-top: 50px;
+    margin-bottom: 100px;
+}
+
 /*********************************** COMMON FORM */
 
 /***** Override autofill default style behavoir ****/
