--- a/bb-pets-adoption-frontend/src/css/applications.css
+++ b/bb-pets-adoption-frontend/src/css/applications.css
@@ -1,3 +1,18 @@
+/************************* COMMON *******/
+
+#pet_applications_message_holder,
+#my_applications_message_holder {
+    width: 100%;
+    margin: 60px auto;
+}
+
+#pet_applications_message_holder #pet_applications_message,
+#my_applications_message_holder,
+#my_applications_message {
+
+    text-align: center;
+}
+
 /******************* MY APPLICATIONS PAGE **/
 
 #my_applications_wrapper {
@@ -36,6 +51,7 @@
 #my_applications_list_holder {
     border: solid 1px black;
     border-radius: 5px;
+    min-height: 400px;
     height: fit-content;
     padding-bottom: 20px;
 }
@@ -314,6 +330,7 @@
     border: none;
     margin: 0 auto 20px;
 }
+
 
 #drop_button {}
 
