--- a/bb-pets-adoption-frontend/src/css/petListing.css
+++ b/bb-pets-adoption-frontend/src/css/petListing.css
@@ -70,15 +70,18 @@ body {
     padding: 0;
 }
 
-#post_action_message_holder {
+#post_action_message_holder,
+#notification_message_holder {
     width: 100%;
-    height: 70px;
+    min-height: 70px;
+    height: fit-content;
     margin: 10px auto 40px;
 }
 
 
 
-#post_action_message_wrapper #post_action_message_container {
+#post_action_message_wrapper #post_action_message_container,
+#notification_message_container {
     width: 90%;
     background-color: #e8d6bf;
     padding: 20px;
