--- a/bb-pets-adoption-frontend/src/css/applications.css
+++ b/bb-pets-adoption-frontend/src/css/applications.css
@@ -28,7 +28,6 @@
 }
 
 /******************* MY APPLICATIONS PAGE **/
-
 #my_applications_wrapper {
 
     min-width: 990px;
@@ -115,7 +114,6 @@
 }
 
 #my_applications_wrapper .application_drop_holder .dropdown-menu {
-
     padding: 0;
     width: inherit;
 }
@@ -127,20 +125,14 @@
 }
 
 #my_applications_wrapper .application_drop_holder .dropdown-item .drop_application_warning {
-
     margin-top: 10px;
     padding: 10px;
 }
 
-
 /*************************** Pet Applications Page ***********/
-
 #pet_applications_wrapper {
-
-    min-width: 990px;
-    max-width: 1100px;
+    width: 990px;
     min-height: 300px;
-    margin-top: 100px;
     margin-bottom: 100px;
     padding: 0;
 }
@@ -169,11 +161,13 @@
 
 
 #pet_applications_list_holder {
-    border: solid 1px black;
+    border: solid 1px #C19A6B;
     border-radius: 5px;
     min-height: 300px;
     height: 800px;
     margin: 0 auto;
+    padding-left: 3px;
+    padding-right: 3px;
 }
 
 
@@ -185,20 +179,24 @@
 }
 
 #pet_applications_wrapper .pet_application_wrapper .pet_application_container {
-    border: solid 1px grey;
+    border: solid 1px #6a5b48;
     border-radius: 10px;
     margin: 15px auto;
     height: fit-content;
     padding-top: 20px;
-    background-color: #ebdfd5;
+    background-color: #f5ebe3;
     padding-right: 0;
-
 }
 
 
 #pet_applications_wrapper .pet_application_wrapper .pet_application_container small {
-
     font-size: 13px;
+    color: #C19A6B;
+}
+
+#pet_applications_wrapper .pet_application_wrapper .pet_application_container p {
+    color: #5A4633;
+    font-weight: 600;
 }
 
 /* Custom CSS to hide the dropdown arrow */
@@ -211,33 +209,38 @@
     height: fit-content;
 }
 
-
 #pet_applications_wrapper #statuses_tap_wrapper #statuses_tap_container .col {
     width: 25%;
     text-align: center;
     padding: 0;
 }
 
+#pet_applications_wrapper #statuses_tap_wrapper #statuses_tap_container button {
+    border: none;
+    padding: 10px;
+    color: #050505;
+    font-weight: 400;
+
+}
 
 #statuses_tap_wrapper #statuses_tap_container #tab_0 {
-    background-color: #d86506;
+    background-color: #C19A6B;
     width: 100%;
     border-top-left-radius: 10px;
 }
 
 #statuses_tap_wrapper #statuses_tap_container #tab_1 {
-    background-color: #b5957b;
+    background-color: #fae6d3;
     width: 100%;
-
 }
 
 #statuses_tap_wrapper #statuses_tap_container #tab_2 {
-    background-color: #034113;
+    background-color: #C19A6B;
     width: 100%;
 }
 
 #statuses_tap_wrapper #statuses_tap_container #tab_3 {
-    background-color: #d86506;
+    background-color: #fae6d3;
     width: 100%;
     border-top-right-radius: 10px;
 
@@ -280,7 +283,7 @@
 
 #view_application_wrapper {
     padding-right: 0;
-    background-color: #f5ebe3;
+    background-color: #C19A6B;
 }
 
 .view_application_wrapper {
@@ -294,7 +297,7 @@
 
 #view_application_comment_container {
     margin: 0 auto;
-    border: solid 1px rgb(144, 123, 99);
+    border: solid 1px #f5ebe3;
     border-radius: 10px;
     padding: 30px;
     height: fit-content;
@@ -309,6 +312,8 @@
 #update_status_heading {
     text-align: center;
     margin-top: 20px;
+    color: #f5ebe3;
+    font-weight: 300;
 }
 
 #app_update_status_holder {
@@ -332,7 +337,7 @@
 #separator {
     background-color: #000000;
     height: 1px;
-    width: 40%;
+    width: 70%;
     margin: 0 auto;
 }
 
@@ -340,12 +345,286 @@
     width: 40%;
     padding: 10px;
     letter-spacing: 0.5px;
-    color: #fae6d3;
-    border: none;
+    color: #6a5b48;
+    border: solid 1px #6a5b48;
     margin: 0 auto 20px;
+    background-color: #fae6d3;
+    font-weight: 700;
 }
 
 
-#drop_button {}
+#pet_applications_wrapper #view_app_update_status_submit_button:hover {
+    color: #f5ebe3;
+    background-color: #6a5b48;
+    border: solid 1px #f5ebe3;
 
-#view_button {}
+}
+
+#pet_applications_wrapper .action-buttons-holder {
+    background-color: #6a5b48;
+    height: 70px;
+    border-radius: 10px;
+    margin-right: 4px;
+    margin-top: 5px;
+    margin-bottom: 4px;
+}
+
+#drop_button,
+#view_button {
+    color: #ffffff;
+    font-weight: 700;
+}
+
+@media (max-width: 1200px) {}
+
+@media (min-width: 992px) {}
+
+/************************************************* (min-width: 768px) and (max-width: 990px) ****/
+
+@media (min-width: 768px) and (max-width: 990px) {
+
+
+    /******************* MY APPLICATIONS PAGE **/
+    #my_applications_wrapper {
+
+        min-width: 990px;
+        max-width: 1100px;
+        min-height: 300px;
+        margin-top: 100px;
+        margin-bottom: 100px;
+        padding: 0;
+    }
+
+    #my_applications_spinner_holder {
+        height: inherit;
+        width: inherit;
+        padding: 0;
+        margin: 0;
+    }
+
+    #my_applications_spinner_holder .spinner-border {
+        height: 80px;
+        width: 80px;
+        color: #9E7F66;
+        margin: 0 auto;
+        position: relative;
+        top: 40%;
+    }
+
+    #my_applications_wrapper #my_applications_container {
+        width: 90%;
+        height: fit-content;
+        padding: 0;
+        margin: 0 auto;
+    }
+
+    #my_applications_list_holder {
+        border: solid 1px black;
+        border-radius: 5px;
+        min-height: 400px;
+        height: fit-content;
+        padding-bottom: 20px;
+    }
+
+
+    #my_applications_wrapper .applicationCard_wrapper .application_details_row {
+        height: 33%;
+        padding-top: 20px;
+    }
+
+    #my_applications_wrapper .applicationCard_wrapper .applicationCard_container {
+        border: solid 1px grey;
+        border-radius: 10px;
+        margin-top: 30px;
+    }
+
+    /* Custom CSS to hide the dropdown arrow */
+    .no-arrow::after {
+        display: none !important;
+    }
+
+    #my_applications_wrapper .applicationCard_wrapper .application_img_holder {
+
+        padding: 0;
+
+    }
+
+    #my_applications_wrapper .applicationCard_wrapper .application_img_holder img {
+        height: auto;
+        width: 100%;
+        border-top-left-radius: 10px;
+    }
+
+    #my_applications_wrapper .applicationCard_wrapper .drop_application_dropdown {
+        text-align: center;
+        background-color: beige;
+        margin-bottom: 0px;
+        padding: 4px;
+        border: none;
+        cursor: pointer;
+        font-weight: bold;
+        letter-spacing: 1px;
+        width: 100%;
+        background-color: #9E7F66;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+    }
+
+    #my_applications_wrapper .application_drop_holder .dropdown-menu {
+        padding: 0;
+        width: inherit;
+    }
+
+    #my_applications_wrapper .application_drop_holder .dropdown-item {
+        text-align: center;
+        background-color: #fae6d3;
+        padding: 10px;
+    }
+
+    #my_applications_wrapper .application_drop_holder .dropdown-item .drop_application_warning {
+        margin-top: 10px;
+        padding: 10px;
+    }
+
+    /*************************** Pet Applications Page ***********/
+    #pet_applications_wrapper {
+        width: 990px;
+        min-height: 300px;
+        margin-bottom: 100px;
+        padding: 0;
+    }
+
+    #pet_applications_wrapper #pet_applications_container {
+        width: 85%;
+        min-height: fit-content;
+        margin: 0 auto;
+    }
+
+
+
+    #statuses_tap_wrapper #statuses_tap_container #tab_0 {
+        background-color: #C19A6B;
+        width: 100%;
+        border-top-left-radius: 10px;
+    }
+
+    #statuses_tap_wrapper #statuses_tap_container #tab_1 {
+        background-color: #fae6d3;
+        width: 100%;
+    }
+
+    #statuses_tap_wrapper #statuses_tap_container #tab_2 {
+        background-color: #fae6d3;
+        width: 100%;
+    }
+
+    #statuses_tap_wrapper #statuses_tap_container #tab_3 {
+        background-color: #C19A6B;
+        width: 100%;
+        border-top-right-radius: 10px;
+
+    }
+
+}
+
+/*********************************     @media (min-width: 356px) and (max-width: 575px)  *******/
+@media (min-width: 575px) and (max-width: 775px) {
+
+    #pet_applications_wrapper .action-buttons-holder {
+        background-color: #6a5b48;
+        height: 50px;
+        border-radius: 10px;
+        margin-right: 4px;
+        margin-top: 5px;
+        margin-bottom: 4px;
+    }
+
+
+    #statuses_tap_wrapper #statuses_tap_container #tab_0 {
+        background-color: #C19A6B;
+        width: 100%;
+        border-top-left-radius: 10px;
+    }
+
+    #statuses_tap_wrapper #statuses_tap_container #tab_1 {
+        background-color: #fae6d3;
+        width: 100%;
+    }
+
+    #statuses_tap_wrapper #statuses_tap_container #tab_2 {
+        background-color: #fae6d3;
+        width: 100%;
+    }
+
+    #statuses_tap_wrapper #statuses_tap_container #tab_3 {
+        background-color: #C19A6B;
+        width: 100%;
+        border-top-right-radius: 10px;
+
+    }
+
+    #pet_applications_wrapper .pet_application_wrapper .pet_application_container {
+        padding-bottom: 3px;
+    }
+}
+
+/*********************************     @media (min-width: 356px) and (max-width: 575px)  *******/
+@media (min-width: 356px) and (max-width: 575px) {
+
+
+    /*************************** Pet Applications Page ***********/
+    #pet_applications_wrapper {
+        width: 100%;
+        min-height: 300px;
+        margin-bottom: 100px;
+        padding: 0;
+    }
+
+    #pet_applications_wrapper #pet_applications_container {
+        width: 95%;
+        min-height: fit-content;
+        margin: 0 auto;
+    }
+
+    #statuses_tap_wrapper #statuses_tap_container #tab_0 {
+        background-color: #C19A6B;
+        width: 100%;
+        border-top-left-radius: 10px;
+    }
+
+    #statuses_tap_wrapper #statuses_tap_container #tab_1 {
+        background-color: #fae6d3;
+        width: 100%;
+    }
+
+    #statuses_tap_wrapper #statuses_tap_container #tab_2 {
+        background-color: #fae6d3;
+        width: 100%;
+    }
+
+    #statuses_tap_wrapper #statuses_tap_container #tab_3 {
+        background-color: #C19A6B;
+        width: 100%;
+        border-top-right-radius: 10px;
+
+    }
+
+    #view_application_comment_container {
+        padding: 15px;
+    }
+
+    #pet_applications_wrapper .action-buttons-holder {
+        background-color: #6a5b48;
+        height: 50px;
+        border-radius: 10px;
+        margin-right: 4px;
+        margin-top: 5px;
+        margin-bottom: 4px;
+    }
+
+    #pet_applications_wrapper #view_app_update_status_submit_button {
+        width: 60%;
+        padding: 10px;
+    }
+
+}
